--- a/ArmyProjects/Увольнения2/MainWindow.xaml
+++ b/ArmyProjects/Увольнения2/MainWindow.xaml
@@ -14,8 +14,9 @@
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
 
+        <Button Name="ButSave" Content="Сохранить изменения" HorizontalAlignment="Right" VerticalAlignment="Center" Width="auto" Height="28" Click="ButSave_Click" Margin="0,10,10,12"/>
         <Label Content="Поиск" Height="50" Width="65" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Center" Margin="8,0,0,0" Padding="0" Grid.IsSharedSizeScope="True" FontSize="18"/>
-        <TextBox Height="30" TextWrapping="Wrap" VerticalAlignment="Center" Width="190" HorizontalAlignment="Left" VerticalContentAlignment="Center" Margin="78,10,0,5" ToolTip="Введите фамилию или часть" FontSize="18"/>
+        <TextBox Height="30" TextWrapping="Wrap" VerticalAlignment="Center" Width="190" HorizontalAlignment="Left"  VerticalContentAlignment="Center" Margin="78,10,0,5" ToolTip="Введите фамилию или часть" FontSize="18"/>
         <Canvas Margin="0,0,0,0" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="#FFD8D8D8" />
         <TabControl Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderBrush="#FF040303">
 
@@ -33,7 +34,7 @@
                             <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Orientation="Vertical" Grid.Column="0">
                                 <Label Content=" " HorizontalAlignment="Stretch" VerticalAlignment="Top" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="30" BorderThickness="1" BorderBrush="Black"/>
                                 <DataGrid Name="GridNames" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-                                          GridLinesVisibility="All" ClipToBounds="True" AutoGenerateColumns="False" CanUserAddRows="False">
+                                          GridLinesVisibility="All" ClipToBounds="True" AutoGenerateColumns="False" CanUserAddRows="False" IsReadOnly="True">
                                     <DataGrid.Columns>
                                         <DataGridTextColumn Header="№" Width="Auto" Binding="{Binding Path=ThatManNum}"/>
                                         <DataGridTextColumn Header="ФИО" Width="Auto" Binding="{Binding Path=ThatName}"/>
@@ -89,6 +90,7 @@
                 <Grid Background="#FFE5E5E5"/>
             </TabItem>
         </TabControl>
+        
 
 
 
